--- a/public/css/app.custom.css
+++ b/public/css/app.custom.css
@@ -2,3 +2,13 @@
 .g-field-search .form-group{
     position: static;
 }
+
+.dropdown-menu{
+    top: auto;
+    left: auto;
+    right: 48px;
+}
+
+.z-max{
+    z-index: 99999999 !important;
+}
