created new list card &sidefilter

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -28,7 +28,7 @@ span.irs-bar,span.irs-to,span.irs-from{
 
 }
 .bravo_wrap .bravo-checkbox .fa-star {
-    color: #fc5b62 !important;
+    color: #686565 !important;
     font-size: 15px;
     position: relative;
     top: -1px;
