--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -11,3 +11,12 @@
 .z-max{
     z-index: 99999999 !important;
 }
+.static-header{
+    position: relative;
+}
+.static-header .main-menu > ul > li span > a,
+.static-header ul#top_menu li a.cart-menu-btn:before,
+ul#top_menu li a.wishlist_bt_top:before,
+.static-header .dropdown-user a{
+    color: #444;
+}
