--- a/public/panagea/css/style.css
+++ b/public/panagea/css/style.css
@@ -10525,3 +10525,11 @@ a.btn_mapp:hover {
 .bravo_wrap .bravo_search_tour .bravo-list-item .list-item .item-tour .service-review {
     padding: 0px !important; 
 }
+.card .thumb-image {
+    display: block;
+    width: 100%;
+     padding-bottom: 0%;
+     border-radius: 15px;
+
+
+}
