Make booking form model on mobile.

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -54,8 +54,11 @@ ul.cbp_tmtimeline {
 .cbp_tmtimeline:before {
     left: 18.4% !important;
 }
-/*@media (max-width: 767px) {*/
-/*    .theiaStickySidebar{*/
-/*        display: none;*/
-/*    }*/
-/*}*/
+@media (max-width: 767px) {
+    #sidebar{
+        display: none;
+    }
+    #tour-form-book #sidebar{
+        display: block;
+    }
+}
