--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -20,6 +20,13 @@ ul#top_menu li a.wishlist_bt_top:before,
 .static-header .dropdown-user a{
     color: #444;
 }
+ul#top_menu li a.wishlist_bt_top:before{
+    color: #fff;
+}
+.static-header:not(.sticky) ul#top_menu li a.wishlist_bt_top:before{
+    color:#444
+}
+
 .secondary_nav{
     top: 0 !important;
 }
