--- a/public/panagea/css/style.css
+++ b/public/panagea/css/style.css
@@ -8535,12 +8535,17 @@ ul.share-buttons {
     padding: 0;
     list-style: none;
     text-align: center;
-    margin: 0 0 25px 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2px;
+
 }
 
 ul.share-buttons li {
     display: inline-block;
-    margin: 0 5px 5px 5px;
+    margin: 2px;
 }
 
 ul.share-buttons li a {
