make secondary nav scrollable

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -69,3 +69,28 @@ ul.cbp_tmtimeline {
         display: block;
     }
 }
+.secondary_nav div{
+    position: relative;
+    display: flex;
+}
+.secondary_nav ul{
+    width: 100%;
+    margin: 2px;
+    overflow: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+.secondary_nav ul::-webkit-scrollbar {
+    height: 0;
+    width: 0;
+    display: none;
+}
+.secondary_nav ul::-webkit-scrollbar-thumb {
+    display: none;
+}
+.secondary_nav ul li {
+    display: inline-block;
+}
+.secondary_nav ul li:last-of-type{
+    margin-left: auto;
+}
