minor edits on the booking form.

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -97,3 +97,9 @@ ul.cbp_tmtimeline {
 .secondary_nav .container div{
     margin-right: 30px;
 }
+#datepicker-modal{
+    background: #ffffff;
+}
+#tour-form-book{
+    padding: 0 !important;
+}
