--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -103,3 +103,9 @@ ul.cbp_tmtimeline {
 #tour-form-book{
     padding: 0 !important;
 }
+.theiaStickySidebar{
+    background-color: #EAEEF3;
+    border-radius: 4px;
+    margin-top: -1rem;
+    padding-bottom: 1rem;
+}
