--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -1,3 +1,19 @@
+.container-fluid {
+    max-width: 84.75rem;
+    box-sizing: border-box;
+    position: relative;
+    z-index: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .container-fluid {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+}
+
 .g-field-search .form-group {
     position: static;
 }
@@ -35,8 +51,9 @@
     pointer-events: visible;
 }
 
-.swiper-locations {
-}
+/* .swiper-locations .swiper-slide {
+    height: 220px;
+} */
 
 .swiper-slide .destination-item {
     display: block;
