--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,109 @@
 /* START: SWIPER CAROUSEL */
-.swiper-category .swiper-slide {
-    width: 200px;
-    height: 500px;
+
+/* locations custom css  */
+
+.bravo_wrap
+    .page-template-content
+    .bravo-list-locations.style_4
+    .list-item
+    .destination-item
+    .image {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    min-height: 0;
 }
 
-.swiper-locations .swiper-wrapper {
-    transition-timing-function: linear;
+.bravo_wrap
+    .page-template-content
+    .bravo-list-locations.style_4
+    .list-item
+    .destination-item
+    .content
+    .desc {
+    top: 3rem;
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-list-locations
+    .list-item
+    .destination-item {
+    padding-top: 63.49% !important;
+    min-height: 0 !important;
+    margin: 0 !important;
+    height: 0;
+    /* position: relative; */
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-list-locations.style_4
+    .list-item
+    .destination-item
+    .content
+    .title {
+    text-shadow: #000 0.0625rem 0 0.625rem;
+    cursor: pointer;
+    overflow-wrap: break-word;
+}
+
+/* swiper category css  */
+
+.swiper-category .swiper-wrapper {
+    height: 180px;
+    /* border-radius: 10px; */
+}
+
+.bravo-box-category-tour .swiper-category .swiper-wrapper .swiper-slide {
+    width: 70%;
+}
+
+.bravo_wrap .page-template-content .bravo-box-category-tour .list-item .item {
+    /* height: 180px; */
+    border-radius: 10px;
+    transition: all 0.1ms;
+}
+.bravo_wrap
+    .page-template-content
+    .bravo-box-category-tour
+    .list-item
+    .item:hover {
+    box-shadow: 2px 6px 8px 0px rgb(171 170 170 / 91%);
+}
+
+.bravo_wrap .page-template-content .bravo-box-category-tour .swiper-wrapper {
+    margin: 10px 5px;
+}
+
+.bravo_wrap .page-template-content .bravo-box-category-tour .list-item .item a {
+    /* width: 100%; */
+    height: 100%;
+    border-radius: 10px;
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-box-category-tour
+    .list-item
+    .item
+    a
+    img {
+    width: 100%;
+    border-radius: 10px;
+    /* height: 100%; */
+}
+.bravo_wrap
+    .page-template-content
+    .bravo-box-category-tour
+    .list-item
+    .item
+    .text-title {
+    text-shadow: #000 0.0625rem 0 0.625rem;
 }
 
 /* END: SWIPER CAROUSEL */
