--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -35,6 +35,19 @@
     font-weight: bold;
 }
 
+.button-next {
+    /* margin-left: -30px; */
+    /* margin-right: -30px; */
+    padding-left: 25px;
+    padding-right: -25px;
+}
+
+.button-prev {
+    /* margin-right: -30px; */
+    /* margin-left: -30px; */
+    padding-left: 25px;
+    padding-right: -25px;
+}
 .swiper-button-next,
 .swiper-button-prev {
     height: 2rem;
@@ -42,7 +55,7 @@
     background: white;
     padding: 1.1rem;
     border-radius: 40px;
-    top: calc(50% - 1rem);
+    top: 50%;
     filter: drop-shadow(0 2px 3px rgba(0, 0, 0, 0.2));
 }
 
@@ -51,13 +64,13 @@
     pointer-events: visible;
 }
 
-/* .swiper-locations .swiper-slide {
-    height: 220px;
-} */
+.swiper-locations .swiper-slide {
+    /* overflow-x: auto; */
+}
 
-.swiper-slide .destination-item {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+/* featured items custom css style 3  */
+
+.bravo_wrap .page-template-content .bravo-featured-item.style3 .featured-item {
+    padding: 0;
+    border: none !important;
 }
