show half of the next swipper's slides !.

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -74,3 +74,9 @@
     padding: 0;
     border: none !important;
 }
+
+.swiper-locations .swiper-wrapper {
+    -webkit-transition-timing-function:linear!important;
+    -o-transition-timing-function:linear!important;
+    transition-timing-function:linear!important;
+}
