--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,30 +1,12 @@
-.bravo_wrap
-    .page-template-content
-    .bravo-call-to-action
-    .call-to-action
-    .context {
-    background: none;
-}
-.bravo_wrap
-    .page-template-content
-    .bravo-call-to-action
-    .call-to-action
-    .section {
-    width: 100%;
-    flex: 1 0 0px;
-    max-width: 100%;
-    margin-left: 0%;
-    right: auto;
-    left: auto;
-    padding-left: 0;
-    padding-right: 0;
-}
+/* call to actions custom css style 4 */
 
-.bravo_wrap .page-template-content .bravo-call-to-action .call-to-action {
+.bravo_wrap .page-template-content .bravo-call-to-action .hero-call-to-action {
     border-radius: 8px;
     padding-bottom: unset;
-    margin-left: unset;
+    margin-left: 1rem;
+    margin-right: 1rem;
     background: #e4f0f0;
+    text-align: center;
 }
 
 .bravo_wrap .page-template-content .bravo-call-to-action .row {
@@ -37,10 +19,43 @@
     margin-right: -0.75rem;
 }
 
+@media screen and (max-width: 767px) {
+    .bravo_wrap .page-template-content .bravo-call-to-action .row {
+        flex-direction: column-reverse;
+    }
+}
+
 .bravo_wrap
     .page-template-content
     .bravo-call-to-action
-    .call-to-action
+    .row
+    .bravo_wrap
+    .page-template-content
+    .bravo-call-to-action
+    .hero-call-to-action
+    .section {
+    width: 100%;
+    flex: 1 0 0px;
+    max-width: 100%;
+    margin-left: 0%;
+    right: auto;
+    left: auto;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-call-to-action
+    .hero-call-to-action
+    .context-new {
+    padding: 2rem;
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-call-to-action
+    .hero-call-to-action
     .offer-banner {
     order: 1;
     flex: 1;
@@ -52,3 +67,20 @@
     object-position: 25% 25%;
     overflow: hidden;
 }
+
+.bravo_wrap .page-template-content .bravo-call-to-action .context-new .title {
+    font-size: 1.75rem;
+    font-weight: 600;
+    margin-top: 0;
+}
+
+.bravo_wrap
+    .page-template-content
+    .bravo-call-to-action
+    .context-new
+    .sub_title {
+    margin-top: 1.5rem;
+    font-size: 1.3rem;
+}
+
+/* End call to action custom css style 4 */
