just nesting css

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -194,9 +194,9 @@
     pointer-events: visible;
 }
 
-.swiper-locations .swiper-slide {
-    /* overflow-x: auto; */
-}
+/* .swiper-locations .swiper-slide {
+    overflow-x: auto;
+} */
 
 /* featured items custom css style 3  */
 
