fix hero-form field (need more dits on styling)

--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -115,3 +115,7 @@
 .hero_single.version_4 video {
     opacity: 1;
 }
+.smart-search .parent_text{
+    height: 50px !important;
+    padding: 8px;
+}
