--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -120,6 +120,10 @@
     height: 0;
 }
 
+.bravo_wrap .page-template-content .bravo-list-locations .list-item {
+    margin-bottom: 40px;
+}
+
 .bravo_wrap
     .page-template-content
     .bravo-list-locations.style_4
