--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -174,6 +174,6 @@ ul.cbp_tmtimeline {
 .theiaStickySidebar {
     background-color: #eaeef3;
     border-radius: 0.5rem;
-    margin-top: -1rem;
-    padding-bottom: 1rem;
+    /* padding-bottom: 1rem;
+    padding-top: 1rem; */
 }
