--- a/public/panagea/css/custom.css
+++ b/public/panagea/css/custom.css
@@ -133,6 +133,9 @@ ul.cbp_tmtimeline {
     left: 18.4% !important;
 }
 @media (max-width: 767px) {
+    #sidebar {
+        display: none;
+    }
     #tour-form-book #sidebar {
         display: block;
     }
